--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "path-to-regexp": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
