--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
+    "form-data": "^4.0.4",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
