fix upload file proxy

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "centrifuge": "^5.5.2",
+    "cloudscraper": "^4.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
