--- a/WS/nginx.conf
+++ b/WS/nginx.conf
@@ -1,45 +1,45 @@
-# worker_processes  1;
+ worker_processes  1;
+ 
+ events { worker_connections  1024; }
 
-# events { worker_connections  1024; }
+ http {
+   include       mime.types;
+   default_type  application/octet-stream;
+   sendfile      on;
 
-# http {
-#   include       mime.types;
-#   default_type  application/octet-stream;
-#   sendfile      on;
+   proxy_read_timeout  3600s;
+   proxy_send_timeout  3600s;
 
-#   proxy_read_timeout  3600s;
-#   proxy_send_timeout  3600s;
+   server {
+     listen 8080;
+     server_name _;
 
-#   server {
-#     listen 8080;
-#     server_name _;
+    location /connection/websocket {
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "upgrade";
+       proxy_set_header Host $host;
+       proxy_set_header Origin $http_origin;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_buffering off;                         
+       proxy_read_timeout 3600s;
+       proxy_send_timeout 3600s;
 
-#     location /connection/websocket {
-#       proxy_http_version 1.1;
-#       proxy_set_header Upgrade $http_upgrade;
-#       proxy_set_header Connection "upgrade";
-#       proxy_set_header Host $host;
-#       proxy_set_header Origin $http_origin;
-#       proxy_set_header X-Real-IP $remote_addr;
-#       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#       proxy_set_header X-Forwarded-Proto $scheme;
-#       proxy_buffering off;                         
-#       proxy_read_timeout 3600s;
-#       proxy_send_timeout 3600s;
+       proxy_pass http://fugo-v6:8000; 
+     }
 
-#       proxy_pass http://fugo-v6:8000; 
-#     }
+     location /health {
+       proxy_pass http://fugo-v6:8000/health;
+     }
 
-#     location /health {
-#       proxy_pass http://fugo-v6:8000/health;
-#     }
+     location /api {
+       return 403;
+     }
 
-#     location /api {
-#       return 403;
-#     }
-
-#     location / {
-#       return 404;
-#     }
-#   }
-# }
+     location / {
+       return 404;
+     }
+   }
+ }
