--- a/WS/nginx.conf
+++ b/WS/nginx.conf
@@ -19,7 +19,8 @@
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
-       proxy_set_header Origin $http_origin;
+       #proxy_set_header Origin $http_origin;
+       proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
