--- a/WS/config.json
+++ b/WS/config.json
@@ -1,12 +1,12 @@
 {
   "admin": { "enabled": true, "password": "admin", "secret": "admin_secret" },
   "client": {
-    "token": { "hmac_secret_key": "MY_SUPER_SECRET_456" },
+    "token": { "hmac_secret_key": "my_hmac_secret_key" },
     "allowed_origins": ["http://localhost:3000", "http://127.0.0.1:5500", "http://localhost:5173"],
     "ping_interval": "1h",
     "pong_timeout": "15s"
   },
-  "http_api": { "key": "key_ngau_nhien_rat_dai" },
+  "http_api": { "key": "my_http_api_key" },
   "log": { "level": "info" },
   "health": { "enabled": true },
 
